fixed attempt and user roles
